tests/out/error/import/empty_package.in.bt
import bait.test_pkgs.empty
